# vercel-deployments

./: .gitignore  Justfile  README.md  pyproject.toml
.github/workflows/: release.yml
data/applications/: vercel-deployments.desktop
debian/: changelog  control  install  rules  vercel-deployments.postinst.debhelper  vercel-deployments.prerm.debhelper  vercel-menu-indicator.postinst.debhelper  vercel-menu-indicator.prerm.debhelper
debian/vercel-deployments/DEBIAN/: control  md5sums  postinst  prerm
debian/vercel-deployments/usr/lib/python3/dist-packages/vercel_deployments-1.0.0.dist-info/: METADATA  entry_points.txt  top_level.txt
debian/vercel-deployments/usr/lib/python3/dist-packages/vercel_menu_indicator/: __init__.py  config.py  indicator.py  preferences.py
scripts/: build-release.sh
vercel_menu_indicator/: api.py  indicator.py  main.py
